--- a/app.css
+++ b/app.css
@@ -26,6 +26,7 @@ main {
     max-width: 1100px;
     padding: 50px 50px 0 50px;
     border-radius: 10px;
+    position: relative;
 }
 
 .container {
@@ -89,7 +90,7 @@ ul {
 }
 
 .navbar-item a::before,
-.navbar-item a::after{
+.navbar-item a::after {
     content: "";
     position: absolute;
     bottom: 0;
@@ -99,15 +100,16 @@ ul {
     background-color: #ca5556;
 }
 
-.navbar-item a::before{
+.navbar-item a::before {
     left: 50%;
 }
-.navbar-item a::after{
+
+.navbar-item a::after {
     right: 50%;
 }
 
 .navbar-item a:hover::before,
-.navbar-item a:hover::after{
+.navbar-item a:hover::after {
     width: 50%;
 }
 
@@ -232,4 +234,36 @@ input[type='submit'] {
 
 .references ul li {
     margin-bottom: 10px;
+}
+
+/* LOADING */
+
+.loading{
+    height: 175px;
+}
+
+.pulse {
+    position: absolute;
+    top: 60%;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    width: 7em;
+    height: 7em;
+    border-radius: 7em;
+    background-color: #ca5556;
+    outline: 1px solid transparent;
+    animation: pulse 1.2s ease-in-out infinite;
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(0);
+        opacity: 0.8;
+    }
+
+    100% {
+        transform: scale(1);
+        opacity: 0;
+    }
 }
